--- a/style.css
+++ b/style.css
@@ -101,15 +101,13 @@ input::-webkit-slider-thumb {
     appearance: none;
     width: 1.4rem;
     height: 1.4rem;
-    border-radius: 50%;
-
-
-
-    
+    border-radius: 50%;    
     background: black;
 }
 
 
+
+/* darkmode */
 
 
 
