--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ input[type="range"] {
 }
 
 input::-webkit-slider-thumb {
-    appearance: none;
+    -webkit-appearance: none;
     width: 1.4rem;
     height: 1.4rem;
     border-radius: 50%;    
